# haskell_concurrency

./: .gitignore  cabal.sandbox.config  compile  haskell_concurrency.cabal  hcc.cabal  readme.md
docs/: definitions.md  functional_definitions.md  haskell_language.md  readme.md  take-aways.md  useful_flags.md
src/: Main.hs  printReverse.hs  rpar.hs  strategy.hs
src/haskell/: ex2-1.hs
src/haskell/ch2/: Client.hs  Example.hs  Pascal.hs  SimpleFunctions.hs  ackermann.hs  infer.hs  records.hs  unzip.hs
src/haskell/ch3/: Triangle.hs  ex3-2.hs  geometry.hs  pfs.hs
src/sudoku/: sudoku1.hs  sudoku2.hs  sudoku3.hs  sudoku5.hs
