name:              haskell-concurrency
Build-Type:        Simple
cabal-version:     >= 1.2
version:           1.0

executable rpar
    hs-source-dirs:  src
    main-is:         rpar.hs
    build-depends:   base, parallel, time


executable sudoku
    hs-source-dirs:  src/sudoku
    main-is:         sudoku.hs
    other-modules:   Soduku
    build-depends:   base,
                        parallel,
                        array,
                        time

    extra-source-files:   sudoku17.1000.txt
                            sudoku17.16000.txt
                            sudoku17.49151.txt