name:              haskell-concurrency
Build-Type:        Simple
cabal-version:     >= 1.2
version:           1.0



executable rpar
    hs-source-dirs:  src
    main-is:         rpar.hs
    build-depends:   base, parallel, time


executable sudoku1
    hs-source-dirs:  src/sudoku
    main-is:         sudoku1.hs
    other-modules:   Sudoku
    build-depends:   base,
                        parallel,
                        array,
                        time

    data-files: sudoku17.1000.txt
                sudoku17.16000.txt
                sudoku17.49151.txt


    