name:              hcc
Build-Type:        Simple
cabal-version:     >= 1.2
version:           0.1

data-dir:   src/resources/
data-files: sudoku17.1000.txt
            sudoku17.16000.txt
            sudoku17.49151.txt

executable rpar
    hs-source-dirs:  src
    main-is:         rpar.hs
    build-depends:   base, parallel, time


executable sudoku1
    hs-source-dirs: src/sudoku/
    main-is:        sudoku1.hs
    other-modules:  Sudoku
    build-depends:  base,
                    parallel,
                    array,
                    time

executable sudoku2
    hs-source-dirs: src/sudoku/
    main-is:        sudoku2.hs
    other-modules:  Sudoku
    build-depends:  base,
                    deepseq,
                    parallel,
                    array,
                    time     
    ghc-options:    -O2
                    -threaded
                    -rtsopts
                    -eventlog

executable sudoku3
    hs-source-dirs: src/sudoku/
    main-is:        sudoku3.hs
    other-modules:  Sudoku
    build-depends:  base,
                    deepseq,
                    parallel,
                    array,
                    time     
    ghc-options:    -O2
                    -threaded
                    -rtsopts
                    -eventlog
           
    


    